@@ -146,10 +146,7 @@ exportMethods(
               "stripWhitespace",
               "tmTolower",
               "stemDoc",
-              "removeCitation",
               "removeNumbers",
-              "removeMultipart",
-              "removeSignature",
               "removeWords",
               "removePunctuation",
               "replacePatterns",
